# libgpg-error

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
.travis/: install-gettext.sh
docker/: Dockerfile.static  Dockerfile.windows
libgpg-error-sys/: Cargo.toml  build.rs  lib.rs
libgpg-error-sys/src/: consts.rs  lib.rs
src/: consts.rs  lib.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tools/: mkerrcodes.py
