[package]
name = "gpg-error"
version = "0.5.0"
edition = "2018"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/gpg-rs/libgpg-error"
documentation = "https://docs.rs/gpg-error"
categories = ["api-bindings"]
keywords = ["gpg"]
description = "Libgpg-error bindings for Rust"
build = "build.rs"

[badges]
travis-ci = { repository = "gpg-rs/libgpg-error" }
maintenance = { status = "experimental" }

[dependencies.ffi]
package = "libgpg-error-sys"
path = "libgpg-error-sys"
version = "0.5"

[workspace]
members = ["systest"]
