[package]
name = "gpg-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpg-error"
categories = ["api-bindings"]
keywords = ["gpg"]
description = "Libgpg-error bindings for Rust"

[badges]
maintenance = { status = "experimental" }

[dependencies.ffi]
package = "libgpg-error-sys"
path = "libgpg-error-sys"
version = "0.5.2"

[workspace.package]
version = "0.5.2"
edition = "2021"
authors = ["John Schug <john.ips.schug@gmail.com>"]
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/libgpg-error"
