[package]
name = "gpg-error"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gpg-error"
categories = ["api-bindings"]
keywords = ["gpg"]
description = "Libgpg-error bindings for Rust"

[features]
windows_raw_dylib = ["ffi/windows_raw_dylib"]

[dependencies.ffi]
package = "libgpg-error-sys"
path = "libgpg-error-sys"
version = "0.6.1"

[workspace.package]
version = "0.6.1"
edition = "2021"
license = "LGPL-2.1"
repository = "https://github.com/gpg-rs/libgpg-error"
