[package]
name = "libgpg-error-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/libgpg-error-sys"
categories = ["external-ffi-bindings"]
keywords = ["gpg"]
description = "Raw bindings for libgpg-error"
links = "gpg-error"

[badges]
maintenance = { status = "experimental" }

[package.metadata.system-deps]
gpg-error = "1.12"

[build-dependencies]
system-deps = "6.0.2"

[target.'cfg(windows)'.build-dependencies]
build-rs = "0.1.2"
winreg = "0.10.1"
