[package]
name = "libgpg-error-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/libgpg-error-sys"
categories = ["external-ffi-bindings"]
keywords = ["gpg"]
description = "Raw bindings for libgpg-error"
links = "gpg-error"

[package.metadata.system-deps]
gpg-error = "1.12"

[features]
windows_raw_dylib = []

[build-dependencies]
system-deps = "6.2.2"

[target.'cfg(windows)'.build-dependencies]
build-rs = "0.1.2"
winreg = "0.52.0"
